fix alignment attempt2

--- a/lightbox/lightbox.css
+++ b/lightbox/lightbox.css
@@ -25,6 +25,12 @@ body.lb-disable-scrolling {
   display: none;
 }
 
+#lightboxOverlay { 
+  position: fixed !important; 
+  top: 0; left: 0; height: 100% !important; 
+  width: 100% !important; 
+}
+
 .lightbox {
   position: fixed;
   left: 0;
@@ -36,6 +42,12 @@ body.lb-disable-scrolling {
   outline: none;
   object-fit: cover;
   justify-content: center;
+}
+
+#lightbox { 
+  position: fixed !important; 
+  top: 50% !important; 
+  transform: translateY(-50%); 
 }
 
 .lightbox .lb-image {
